import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'org.jetbrains.intellij' version '1.1.4'
}

apply plugin: 'idea'
apply plugin: 'org.jetbrains.intellij'
apply plugin: 'java'

version = "${version}"
sourceCompatibility = javaVersion
targetCompatibility = javaVersion

sourceSets {
    main {
        java.srcDirs 'src'
        resources.srcDirs 'resources'
    }
}

processResources {
    filesMatching('**/plugin.xml') {
        filter ReplaceTokens, tokens: [
            version                  : version.toString(),
            apacheDirectoryApiVersion: apacheDirectoryApiVersion
        ]
    }
}

intellij {
    pluginName = 'ldap-browser-idea-plugin'
    version = ideaVersion
    updateSinceUntilBuild = false
    // sandboxDirectory = "$project.buildDir/plugin-sandbox"

    buildSearchableOptions {
        enabled = false // workaround for https://youtrack.jetbrains.com/issue/KT-42837
    }

    runIde {
        jvmArgs = ['--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED']
    }

    publishPlugin {
        // the publish task now requires a token rather than username/password
        token = provider {
            System.getenv('JETBRAINS_TOKEN')
        }
    }
}

configurations.all {
    exclude group: 'org.slf4j', module: ''
}

tasks.withType(JavaCompile) {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    options.encoding = 'UTF-8'
    options.compilerArgs << "-Xlint:deprecation"
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.apache.directory.api', name: 'api-all', version: apacheDirectoryApiVersion
}
